--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ numpy~=2.0.2
 cufflinks~=0.17.3
 scikit-learn~=1.5.2
 streamlit~=1.39.0
-transformers~=4.46.0
+transformers~=4.46.2
 torch~=2.5.0
 tensorflow~=2.18.0
 tf-keras~=2.18.0
+customtkinter~=5.2.2
